[package]
name = "mlua_bindgen"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { workspace = true }
macros = {path="./macros"}
shared = {path="./shared"}

[dev-dependencies]
mlua = {workspace = true, features=["macros"]}

[workspace]
members = [
    "macros",
    "shared"
]

[workspace.dependencies]
syn = {version="2.0.89", features = ["full"]}
proc-macro2 = "1.0.91"
mlua = {version="0.10.1", features=["luau"]}