[package]
name = "mlua_bindgen"
version = "0.3.0"
edition = "2021"

[features]
default = []
bindgen = ["dep:walkdir"]
 
[dependencies]
syn = { workspace = true }
proc-macro2 = { workspace = true }
macros = {path="./macros"}
shared = {path="./shared"}
walkdir = {version="2.5.0", optional = true}

[dev-dependencies]
mlua = {workspace = true, features=["macros", "luau"]}

[workspace]
members = [
    "macros",
    "shared"
]

[workspace.dependencies]
syn = {version="2.0.89", features = ["full"]}
proc-macro2 = "1.0.91"
mlua = {version="0.10.2"}
quote = "1.0.0"
